--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "i18next": "^21.6.16",
     "leaflet": "^1.8.0",
     "react": "^17.0.2",
+    "react-leaflet": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.7",
     "react-redux": "^7.2.6",
