--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,6 @@ FROM node:16.14.0
 COPY . /claimasyl
 
 WORKDIR /claimasyl
-RUN npm install --ignore-scripts
+RUN npm install --legacy-peer-deps
 RUN npm run build
 
