--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
   frontend:
     container_name: claim.frontend
     #entrypoint: ['npm', '--prefix', '/onefleet', 'run', 'dev']
-    ports:
-      - '8080:8080'
     volumes:
       - ./:/claimasyl
 
@@ -13,9 +11,32 @@ services:
         - ./build:/claimasyl/build
     build:
       context: frontend
-  webserver:
+  nginx:
+    build: nginx
     image: nginx
     ports:
-        - 8000:80
+        - 8080:8080
     volumes:
+        - ./nginx/logs:/usr/local/var/log/nginx/
         - ./frontend/build:/usr/share/nginx/html
+  db:
+    image: postgres
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+  backend:
+    build: ./backend
+    command: bash /code/docker-entrypoint.sh
+    volumes:
+      - ./backend/:/code
+    ports:
+      - "8000:8000"
+    environment:
+      - POSTGRES_NAME=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    depends_on:
+      - db
